# Hy2DL

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml
benchmarks/: Benchmark_Plots.ipynb  Benchmarks.ipynb  readme.md
data/: readme.md  readme.txt
data/basin_id/: basins_camels_ch_331.txt  basins_camels_de_1582.txt  basins_camels_gb_5.txt  basins_camels_gb_518.txt  basins_camels_us_10.txt  basins_caravan_7.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst
examples/: camels_ch.yml  camels_de.yml  camels_gb.yml  camels_pl.yml  camels_us.yml  caravan.yml  finetune_camels_de.yml  hybrid_camels_gb.yml  hybrid_camels_us.yml  hybrid_models.py  lstm_rainfall_runoff.py  mdn.yml  mfLSTM_camels_de_1h.yml  mfLSTM_camels_us_hourly.yml  mfLSTM_camels_us_hourly_ForcingsPerFreq.yml
examples/configs/: camels_ch.yml  camels_de.yml  camels_de_1h.yml  camels_de_multitarget.yml  camels_de_ssl.yml  camels_gb.yml  camels_pl.yml  camels_us.yml  camels_us_mdn_cmal.yml  camels_us_missinginputs_mme.yml  hybrid_camels_gb.yml  hybrid_camels_us.yml  (+2 more)
notebooks/: HybridModels_RainfallRunoff.ipynb  Hybrid_CAMELS_GB.ipynb  Hybrid_CAMELS_US.ipynb  Hybrid_RainfallRunoff.ipynb  LSTM-MDN_RR.ipynb  LSTMMDN_RR.ipynb  LSTM_CAMELS_DE.ipynb  LSTM_CAMELS_GB.ipynb  LSTM_CAMELS_US.ipynb  LSTM_CARAVAN.ipynb  LSTM_Fine_tune.ipynb  LSTM_Forecast.ipynb  LSTM_Luxemburg.ipynb  LSTM_MDN.ipynb  LSTM_RainfallRunoff.ipynb  LSTM_SSL.ipynb  LSTM_hourly_us.ipynb  LSTM_hourly_us_multipleforcings.ipynb  arLSTM_Forecast.ipynb  arLSTM_Luxemburg.ipynb  devMDN.ipynb
scripts/: postprocess.py  train_mdn.py
(+131 files in other folders)
